Rename Systeminfo* to SystemInfo*
Signed-off-by: Alexander Falkenstern <alexander.falkenstern@gmail.com>